--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <title>Responsive</title>
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/base.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
   <h2 class="question--title">Q7 サイズ変更</h2>
+  <div class="q1"></div>
   <h2 class="question--title">Q2 色変更</h2>
   <h2 class="question--title">Q3 margin値の変更</h2>
   <h2 class="question--title">Q4 floatの解除</h2>
