--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 
 <body>
   <h2 class="question--title">Q7 サイズ変更</h2>
-  <div class="q1"></div>
+  <div class="red---box size-change"></div>
   <h2 class="question--title">Q2 色変更</h2>
+  <div class="red---box colorchange"></div>
   <h2 class="question--title">Q3 margin値の変更</h2>
+  <div class="margin-change">
+    <div class="margin-box left-box"></div>
+    <div class="margin-box right-box"></div>
+  </div>
   <h2 class="question--title">Q4 floatの解除</h2>
   <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
