--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h2 class="question--title">Q2 色変更</h2>
   <div class="red---box colorchange"></div>
   <h2 class="question--title">Q3 margin値の変更</h2>
-  <div class="margin-change">
+  <div class="margin-container">
     <div class="margin-box left-box"></div>
     <div class="margin-box right-box"></div>
   </div>
