--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <div class="red---box colorchange"></div>
     <h2 class="question--title">Q3 margin値の変更</h2>
     <div class="margin-container">
-      <div class="margin-box margin-left-box"></div>
-      <div class="margin-box margin-right-box"></div>
+      <div class="margin-content">
+        <div class="margin-box margin-left-box"></div>
+        <div class="margin-box margin-right-box"></div>
+      </div>
     </div>
     <h2 class="question--title">Q4 floatの解除</h2>
     <div class="float-container">
