--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
     <div class="red---box colorchange"></div>
     <h2 class="question--title">Q3 margin値の変更</h2>
     <div class="margin-container">
-      <div class="margin-content">
-        <div class="margin-box margin-left-box"></div>
-        <div class="margin-box margin-right-box"></div>
-      </div>
+      <div class="margin-box margin-left-box"></div>
+      <div class="margin-box margin-right-box"></div>
     </div>
-    <h2 class="question--title">Q4 floatの解除</h2>
-    <div class="float-container">
+  </div>
+  <h2 class="question--title">Q4 floatの解除</h2>
+  <div class="float-container">
+    <div class="float-content">
       <div class="float-box float-red-box"></div>
       <div class="float-box float-blue-box"></div>
     </div>
-    <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
-    <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
-    <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  </div>
+  <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+  <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+  <h2 class="question--title">Q7 要素の表示・非表示</h2>
   </div>
 </body>
 
