--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2 class="question--title">Q7 サイズ変更</h2>
     <div class="red---box size-change"></div>
     <h2 class="question--title">Q2 色変更</h2>
-    <div class="red---box colorchange"></div>
+    <div class="red---box color-change"></div>
     <h2 class="question--title">Q3 margin値の変更</h2>
     <div class="margin-container">
       <div class="margin-box margin-left-box"></div>
@@ -31,6 +31,17 @@
     </div>
   </div>
   <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+  <div class="reverse-container">
+    <div class="reverse-box reverse-first-box">
+      <span class="text">A</span>
+    </div>
+    <div class="reverse-box reverse-second-box">
+      <span class="text">B</span>
+    </div>
+    <div class="reverse-box reverse-third-box">
+      <span class="text">C</span>
+    </div>
+  </div>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
   </div>
