--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
     </div>
   </div>
   <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+  <div class="change-container">
+    <div class="change-box change-first-box">
+      <span class="text">A</span>
+    </div>
+    <div class="change-box change-second-box">
+      <span class="text">B</span>
+    </div>
+    <div class="change-box change-third-box">
+      <span class="text">C</span>
+    </div>
+  </div>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
   </div>
 </body>
