--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
     </div>
   </div>
   <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  <div class="show-container">
+    <div class="show-box show-first-box"></div>
+    <div class="show-box show-second-box"></div>
+    <div class="show-box show-third-box"></div>
+  </div>
+
   </div>
 </body>
 
