--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="margin-box margin-right-box"></div>
     </div>
     <h2 class="question--title">Q4 floatの解除</h2>
-    <div class="float-container">
+    <div class="float-clearfix">
       <div class="float-box float-red-box"></div>
       <div class="float-box float-blue-box"></div>
     </div>
